<resources>
    <string name="app_name">Trip Planner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="add_a_new_trip">Add a new trip</string>
    <string name="home">Home</string>
    <string name="show_routing_for_completed_trips">Click to Show the routing for the completed trips</string>
    <string name="login">Login with mail</string>
    <string name="or">OR</string>
    <string name="welcome_to_trip_planner">Welcome to trip planner</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account? Signup</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="continue_with_facebook">Continue with facebook</string>
    <string name="continue_with_twitter">Continue with twitter</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_your_account">Create your account</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_signin">Already have an account? Signin</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="send">Send</string>
    <string name="trip_name">Trip Name</string>
    <string name="start_point">Start Point</string>
    <string name="end_point">End Point</string>
    <string name="notes">Notes</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>