<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.authentication.signin.SignInFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/welcome_to_trip_planner"
                    android:textAlignment="center"
                    android:textColor="@color/blue"
                    android:textSize="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tv_email_signin"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/email"
                    android:textColorHint="@color/blue"
                    app:boxBackgroundColor="@color/lighterGrey"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxStrokeColor="@color/blue"
                    app:boxStrokeWidth="0dp"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_welcome"
                    app:startIconDrawable="@drawable/email_icon"
                    app:startIconTint="@color/blue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_email_signin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        app:boxStrokeColor="@color/blue" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tv_password_signin"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/password"
                    android:textColorHint="@color/blue"
                    app:boxBackgroundColor="@color/lighterGrey"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxStrokeWidth="0dp"
                    app:endIconMode="password_toggle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_email_signin"
                    app:startIconDrawable="@drawable/lock_icon"
                    app:startIconTint="@color/blue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_password_signin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/dark_gray"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/tv_password_signin"
                    app:layout_constraintTop_toBottomOf="@+id/tv_password_signin" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="80dp"
                    android:background="@drawable/rounded_button"
                    android:drawableLeft="@drawable/mail"
                    android:paddingStart="15dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="10dp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_password_signin" />


                <TextView
                    android:id="@+id/tv_signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/don_t_have_an_account_signup"
                    android:textColor="@color/dark_gray"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/btn_login_email"
                    app:layout_constraintStart_toStartOf="@+id/btn_login_email"
                    app:layout_constraintTop_toBottomOf="@+id/btn_login_email" />

                <View
                    android:id="@+id/divider1"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="16dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toStartOf="@+id/divider2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_signUp" />

                <TextView
                    android:id="@+id/tv_or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:text="@string/or"
                    android:textColor="@color/dark_gray"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_signUp" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="16dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/divider1"
                    app:layout_constraintTop_toBottomOf="@+id/tv_signUp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_google"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/rounded_button"
                    android:backgroundTint="@color/white"
                    android:drawableLeft="@drawable/google"
                    android:paddingStart="15dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/continue_with_google"
                    android:textAllCaps="false"
                    android:textColor="@color/dark_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_or" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/rounded_button"
                    android:backgroundTint="@color/facebook"
                    android:drawableLeft="@drawable/facebook"
                    android:paddingStart="15dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/continue_with_facebook"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_google" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_twitter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/rounded_button"
                    android:backgroundTint="@color/twitter"
                    android:drawableLeft="@drawable/twitter"
                    android:paddingStart="15dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/continue_with_twitter"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_facebook" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>