<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.authentication.forgetpassword.ForgetPasswordFragment">


        <TextView
            android:id="@+id/tv_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:text="@string/reset_your_password"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_email_reset"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/email"
            android:textColorHint="@color/blue"
            app:boxBackgroundColor="@color/lighterGrey"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeWidth="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_reset_password"
            app:startIconDrawable="@drawable/email_icon"
            app:startIconTint="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/rounded_button"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email_reset" />

        <TextView
            android:id="@+id/tv_back_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Back to signin"
            android:textColor="@color/dark_gray"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_send"
            app:layout_constraintStart_toStartOf="@+id/btn_send"
            app:layout_constraintTop_toBottomOf="@+id/btn_send" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>